# fastapi_serverless_demo

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
fastapi_serverless_demo/: lambda.py  main.py
